fixed spacing on contact modal

--- a/src/app/user/public-user-page-component/public-user-page-component.component.css
+++ b/src/app/user/public-user-page-component/public-user-page-component.component.css
@@ -19,3 +19,7 @@ h5.day {
 .profile-column {
   min-width: 223.5px;
 }
+
+.contact {
+  display: block;
+}
